# cpplint

./: .editorconfig  .flake8  MANIFEST.in  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.py  tox.ini
.github/workflows/: ci.yml
halint/: __init__.py  _cpplintstate.py  _nesting_state.py  block_info.py  categories.py  check_file.py  check_language.py  check_line.py  check_lines.py  check_style.py  cleansed_lines.py  cli.py  cpplint.py  error.py  file_info.py  function_state.py  include_state.py  lintstate.py  nesting_state.py  regex.py
tests/: base_case.py  conftest.py  test_block_info.py  test_check_for_function_lengths.py  test_check_style.py  test_cleansed_lines.py  test_cli.py  test_close_expression.py  test_cpplint.py  test_cxx11.py  test_cxx14.py  test_halint.py  test_nesting_state.py  test_order_of_includes.py  test_quiet.py
tests/data/: cpplint_data.py  pragma_once.h
tests/data/check_style/spacing/: no_blank_line_after_section_keyword.cc
tests/data/disallow_macros_at_end/: test1.cc  test2.cc  test3.cc  test4.cc
tests/utils/: error_collector.py  mock_io.py
